# apple_podcast_transcript

./: .env.example  .gitignore  LICENSE  README.md  podcast_transcriber.py  requirements.txt
tauri-podcast/: package.json  requirements.txt  setup.sh
tauri-podcast/python/: list_gemini_models.py  memo_generator.py  setup_check.py  test_transcriber.py  transcriber.py
tauri-podcast/src/: index.html  settings.html  setup.html  window-frame.test.mjs
tauri-podcast/src-tauri/: Cargo.toml  tauri.conf.json
tauri-podcast/src-tauri/capabilities/: default.json
tauri-podcast/src-tauri/icons/: app-icon.icns  icon.icns
tauri-podcast/src-tauri/src/: lib.rs  main.rs  python.rs
tauri-podcast/src-tauri/src/commands/: files.rs  history.rs  memo.rs  mod.rs  settings.rs  setup.rs  transcribe.rs
tauri-podcast/src/css/: style.css
tauri-podcast/src/js/: main.js  router.js  router.test.mjs  settings.js  setup.js
