[package]
name = "transcriber-kun"
version = "1.0.0"
edition = "2021"

[lib]
name = "transcriber_kun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
tauri-plugin-fs     = "2"
tauri-plugin-store  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
